<resources>
    <string name="app_name">Hw4</string>
    <string name="happy_holidays">Happy Holidays!</string>
    <string name="from_magda">From Magda</string>
    <string name="have_yourself_a_merry_little_cristmas_nlet_your_hearth_be_light_n_from_now_on_our_troubles_will_be_out_of_sight">Have yourself a Merry little Cristmas, \nLet your hearth be light \nFrom now on, our troubles will be out of sight</string>
    <string name="let_it_snow">Let it snow</string>
    <string name="gingles_bells">Gingles Bells</string>
</resources>
